rename loss module title

--- a/nbs/01_loss.ipynb
+++ b/nbs/01_loss.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loss function"
+    "# Loss"
    ]
   },
   {
@@ -211,7 +211,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('vqa')",
+   "display_name": "Python 3.9.12 ('fastmtl')",
    "language": "python",
    "name": "python3"
   }
