--- a/nbs/01_loss.ipynb
+++ b/nbs/01_loss.ipynb
@@ -46,7 +46,9 @@
     "#export\n",
     "\n",
     "class CombinedLoss():\n",
-    "    \"\"\"Applies loss functions to multiple model outputs and sums them. If applicable, it can decode and compute activations for each model output.\"\"\"\n",
+    "    \"\"\"Applies loss functions to multiple model outputs and sums them. \n",
+    "    If applicable, it can decode and compute activations for each model output.\"\"\"\n",
+    "\n",
     "    def __init__(self, *loss_funcs, weight=None):\n",
     "        if weight is None:\n",
     "            weight = [1.]*len(loss_funcs)\n",
@@ -98,7 +100,19 @@
     "loss1 = ce(output1, target1)\n",
     "loss2 = bce(output2, target2)\n",
     "expected = loss1 + loss2\n",
-    "test_close(expected, actual)"
+    "test_close(expected, actual)\n",
+    "\n",
+    "# activations\n",
+    "actual_acts_output1, actual_acts_output2 = comb_loss.activation([output1, output2])\n",
+    "expected_acts_output1, expected_acts_output2 = ce.activation(output1), bce.activation(output2)\n",
+    "test_close(expected_acts_output1, actual_acts_output1)\n",
+    "test_eq(expected_acts_output2, actual_acts_output2)\n",
+    "\n",
+    "# decoding\n",
+    "actual_decoded_output1, actual_decoded_output2 = comb_loss.decodes([output1, output2])\n",
+    "expected_decoded_output1, expected_decoded_output2 = ce.decodes(output1), bce.decodes(output2)\n",
+    "test_close(expected_decoded_output1, actual_decoded_output1)\n",
+    "test_eq(expected_decoded_output2, actual_decoded_output2)\n"
    ]
   },
   {
@@ -116,16 +130,16 @@
     {
      "data": {
       "text/plain": [
-       "[tensor([[-0.1412,  0.5191, -0.8597,  0.8974,  0.9123],\n",
-       "         [ 0.5627, -0.3377, -0.1815, -0.5530,  0.0656],\n",
-       "         [-2.3806, -0.1824,  0.0982,  0.3367, -0.4743],\n",
-       "         [ 1.8762, -0.6613,  0.9129,  0.4719, -0.8340],\n",
-       "         [ 1.3965,  1.0323,  0.5446,  0.6935,  1.0835],\n",
-       "         [-2.0293,  0.5273, -0.7488, -1.1144, -0.7592],\n",
-       "         [ 0.2765, -1.1856, -0.1731,  0.8288,  0.1402],\n",
-       "         [-1.3383, -1.0835, -0.8836, -0.3483, -0.1096]]),\n",
-       " tensor([ -8.0780,   3.7517, -10.2364, -11.9647,  -5.8247,  -5.0219,  -0.8134,\n",
-       "         -10.2135])]"
+       "[tensor([[-1.1966, -0.9368, -1.4137, -0.2984,  0.4431],\n",
+       "         [ 0.0891, -1.4017, -0.6367,  0.2432, -0.5874],\n",
+       "         [ 0.3650, -0.3818,  0.9312, -1.9950,  0.2156],\n",
+       "         [ 0.3676, -1.1119, -1.0802, -1.3735, -0.4440],\n",
+       "         [ 0.9762, -0.8892,  1.0861, -0.4404, -0.2750],\n",
+       "         [-0.3843, -0.0126,  0.7231,  1.7333,  0.3376],\n",
+       "         [ 0.7361,  0.9656, -1.4666, -2.3691, -0.9199],\n",
+       "         [-0.0581, -0.6878, -1.9764, -0.9484, -0.6963]]),\n",
+       " tensor([  1.9764,  21.9196, -11.3594,  11.4162,  -9.3616,   1.2402,   7.7606,\n",
+       "         -14.2065])]"
       ]
      },
      "execution_count": null,
@@ -152,8 +166,8 @@
     {
      "data": {
       "text/plain": [
-       "[tensor([4, 0, 3, 0, 0, 1, 3, 4]),\n",
-       " tensor([False,  True, False, False, False, False, False, False])]"
+       "[tensor([4, 3, 2, 0, 2, 3, 1, 0]),\n",
+       " tensor([ True,  True, False,  True, False,  True,  True, False])]"
       ]
      },
      "execution_count": null,
@@ -180,16 +194,16 @@
     {
      "data": {
       "text/plain": [
-       "[tensor([[0.1097, 0.2123, 0.0535, 0.3099, 0.3146],\n",
-       "         [0.3549, 0.1442, 0.1686, 0.1163, 0.2159],\n",
-       "         [0.0228, 0.2057, 0.2723, 0.3456, 0.1536],\n",
-       "         [0.5641, 0.0446, 0.2153, 0.1385, 0.0375],\n",
-       "         [0.2987, 0.2075, 0.1274, 0.1479, 0.2184],\n",
-       "         [0.0425, 0.5475, 0.1528, 0.1060, 0.1512],\n",
-       "         [0.2232, 0.0517, 0.1424, 0.3878, 0.1948],\n",
-       "         [0.1003, 0.1294, 0.1580, 0.2698, 0.3426]]),\n",
-       " tensor([3.1019e-04, 9.7706e-01, 3.5840e-05, 6.3648e-06, 2.9451e-03, 6.5491e-03,\n",
-       "         3.0717e-01, 3.6672e-05])]"
+       "[tensor([[0.0934, 0.1211, 0.0752, 0.2292, 0.4812],\n",
+       "         [0.2955, 0.0665, 0.1430, 0.3447, 0.1502],\n",
+       "         [0.2386, 0.1131, 0.4203, 0.0225, 0.2055],\n",
+       "         [0.4802, 0.1094, 0.1129, 0.0842, 0.2133],\n",
+       "         [0.3572, 0.0553, 0.3987, 0.0866, 0.1022],\n",
+       "         [0.0631, 0.0915, 0.1910, 0.5245, 0.1299],\n",
+       "         [0.3840, 0.4830, 0.0424, 0.0172, 0.0733],\n",
+       "         [0.3819, 0.2035, 0.0561, 0.1568, 0.2017]]),\n",
+       " tensor([8.7830e-01, 1.0000e+00, 1.1660e-05, 9.9999e-01, 8.5953e-05, 7.7560e-01,\n",
+       "         9.9957e-01, 6.7640e-07])]"
       ]
      },
      "execution_count": null,
