add metric utils

--- a/nbs/01_loss.ipynb
+++ b/nbs/01_loss.ipynb
@@ -130,16 +130,16 @@
     {
      "data": {
       "text/plain": [
-       "[tensor([[-1.1966, -0.9368, -1.4137, -0.2984,  0.4431],\n",
-       "         [ 0.0891, -1.4017, -0.6367,  0.2432, -0.5874],\n",
-       "         [ 0.3650, -0.3818,  0.9312, -1.9950,  0.2156],\n",
-       "         [ 0.3676, -1.1119, -1.0802, -1.3735, -0.4440],\n",
-       "         [ 0.9762, -0.8892,  1.0861, -0.4404, -0.2750],\n",
-       "         [-0.3843, -0.0126,  0.7231,  1.7333,  0.3376],\n",
-       "         [ 0.7361,  0.9656, -1.4666, -2.3691, -0.9199],\n",
-       "         [-0.0581, -0.6878, -1.9764, -0.9484, -0.6963]]),\n",
-       " tensor([  1.9764,  21.9196, -11.3594,  11.4162,  -9.3616,   1.2402,   7.7606,\n",
-       "         -14.2065])]"
+       "[tensor([[-0.0704,  0.3978, -0.0734, -0.0817,  0.5799],\n",
+       "         [ 0.5904, -0.2582,  0.2694, -0.2678, -0.0801],\n",
+       "         [-0.1434, -0.7269, -0.7748,  1.5109,  0.2760],\n",
+       "         [-1.3234,  0.1135,  1.8447,  1.3900,  1.1048],\n",
+       "         [-0.4743,  0.3586,  0.6237,  0.0995, -1.7103],\n",
+       "         [-1.0282, -0.1217,  1.4803, -2.6635,  0.1207],\n",
+       "         [-1.0878, -0.1865, -0.5548, -1.6343,  0.2949],\n",
+       "         [ 0.8009,  1.0363,  0.1929,  0.3628, -0.1960]]),\n",
+       " tensor([ -1.9926, -11.5465, -14.1181,  10.7254,  -3.6243,   8.0234,  -6.7252,\n",
+       "          28.0304])]"
       ]
      },
      "execution_count": null,
@@ -166,8 +166,8 @@
     {
      "data": {
       "text/plain": [
-       "[tensor([4, 3, 2, 0, 2, 3, 1, 0]),\n",
-       " tensor([ True,  True, False,  True, False,  True,  True, False])]"
+       "[tensor([4, 0, 3, 2, 2, 2, 4, 1]),\n",
+       " tensor([False, False, False,  True, False,  True, False,  True])]"
       ]
      },
      "execution_count": null,
@@ -194,16 +194,16 @@
     {
      "data": {
       "text/plain": [
-       "[tensor([[0.0934, 0.1211, 0.0752, 0.2292, 0.4812],\n",
-       "         [0.2955, 0.0665, 0.1430, 0.3447, 0.1502],\n",
-       "         [0.2386, 0.1131, 0.4203, 0.0225, 0.2055],\n",
-       "         [0.4802, 0.1094, 0.1129, 0.0842, 0.2133],\n",
-       "         [0.3572, 0.0553, 0.3987, 0.0866, 0.1022],\n",
-       "         [0.0631, 0.0915, 0.1910, 0.5245, 0.1299],\n",
-       "         [0.3840, 0.4830, 0.0424, 0.0172, 0.0733],\n",
-       "         [0.3819, 0.2035, 0.0561, 0.1568, 0.2017]]),\n",
-       " tensor([8.7830e-01, 1.0000e+00, 1.1660e-05, 9.9999e-01, 8.5953e-05, 7.7560e-01,\n",
-       "         9.9957e-01, 6.7640e-07])]"
+       "[tensor([[0.1539, 0.2458, 0.1534, 0.1521, 0.2948],\n",
+       "         [0.3238, 0.1386, 0.2348, 0.1372, 0.1656],\n",
+       "         [0.1131, 0.0631, 0.0602, 0.5915, 0.1721],\n",
+       "         [0.0181, 0.0760, 0.4290, 0.2723, 0.2047],\n",
+       "         [0.1196, 0.2750, 0.3585, 0.2122, 0.0347],\n",
+       "         [0.0523, 0.1295, 0.6429, 0.0102, 0.1651],\n",
+       "         [0.1028, 0.2531, 0.1751, 0.0595, 0.4096],\n",
+       "         [0.2615, 0.3309, 0.1424, 0.1687, 0.0965]]),\n",
+       " tensor([1.1998e-01, 9.6696e-06, 7.3891e-07, 9.9998e-01, 2.5975e-02, 9.9967e-01,\n",
+       "         1.1989e-03, 1.0000e+00])]"
       ]
      },
      "execution_count": null,
