fix bug in metric utils

--- a/nbs/02_metric.ipynb
+++ b/nbs/02_metric.ipynb
@@ -35,47 +35,9 @@
    "source": [
     "#export\n",
     "\n",
-    "from copy import copy\n",
-    "from types import MethodType, FunctionType\n",
     "from fastcore.basics import GetAttr, store_attr\n",
-    "from fastai.metrics import Metric, AvgMetric\n",
-    "\n",
-    "\n",
-    "class _LearnerProxy(GetAttr):\n",
-    "    _default = 'learn'\n",
-    "    def __init__(self, learn, idx):\n",
-    "        store_attr()\n",
-    "        self.pred = self.learn.pred[idx]\n",
-    "        self.y = self.learn.y[idx]\n",
-    "\n",
-    "\n",
-    "def route_to_metric(idx, metric):\n",
-    "    \"\"\"Routes model output at idx to metric\"\"\"\n",
-    "    if isinstance(metric, type): \n",
-    "        metric = metric()\n",
-    "    if isinstance(metric, FunctionType):\n",
-    "        func = lambda preds, *targs, **kwargs: metric(preds[idx], targs[idx], **kwargs)\n",
-    "        func.__name__ = metric.__name__\n",
-    "        return AvgMetric(func)\n",
-    "    if isinstance(metric, Metric):\n",
-    "        accumulate = metric.accumulate\n",
-    "        metric.accumulate = MethodType(lambda self, learn: accumulate(_LearnerProxy(learn, idx)), metric)\n",
-    "        call = metric.__call__\n",
-    "        metric.__call__ = MethodType(lambda self, preds, targs: call(preds[idx], targs[idx]), metric)\n",
-    "        return metric\n",
-    "    raise ValueError(\"Unsupported metric type; must be either function or Metric\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "\n",
-    "from fastcore.basics import GetAttr, store_attr\n",
-    "from fastai.metrics import AvgMetric, AccumMetric\n",
+    "from types import FunctionType\n",
+    "from fastai.metrics import Metric, AvgMetric, AccumMetric\n",
     "\n",
     "\n",
     "class _LearnerProxy(GetAttr):\n",
@@ -111,8 +73,16 @@
     "    \n",
     "    @name.setter\n",
     "    def name(self, value):\n",
-    "        self._name = value\n",
-    "\n",
+    "        self._name = value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
     "\n",
     "def route_to_metric(idx, metric):\n",
     "    \"\"\"Routes model output at idx to metric\"\"\"\n",
@@ -124,11 +94,7 @@
     "        return AvgMetric(func)\n",
     "    if isinstance(metric, Metric):\n",
     "        return RoutedAccumMetric(idx, metric)\n",
-    "    raise ValueError(\"Unsupported metric type; must be either function or Metric\")\n",
-    "\n",
-    "def mtl_metrics(metrics_list):\n",
-    "    \"\"\"Routes metrics by their indice in the outer list\"\"\"\n",
-    "    return [route_to_metric(i, m) for i, metrics in enumerate(metrics_list) for m in metrics]"
+    "    raise ValueError(\"Unsupported metric type; must be either function or Metric\")\n"
    ]
   },
   {
@@ -168,6 +134,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#export\n",
+    "\n",
+    "def mtl_metrics(*metrics_list):\n",
+    "    \"\"\"Convenience function to route each prediction to list of metrics by their order.\"\"\"\n",
+    "    return [route_to_metric(i, m) for i, metrics in enumerate(metrics_list) for m in metrics]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide\n",
+    "routed_metrics = mtl_metrics([F1Score(average='macro'), accuracy], [R2Score])\n",
+    "test_eq(3, len(routed_metrics))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example usage for routing the first model prediction to `F1Score` and `accuracy`, while routing the second one to `R2Score`.\n",
+    "```py\n",
+    "learn = Learner(...\n",
+    "    metrics = mtl_metrics([F1Score(average='macro'), accuracy], [R2Score])\n",
+    "\n",
+    ")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
