organize metric docs

--- a/nbs/02_metric.ipynb
+++ b/nbs/02_metric.ipynb
@@ -49,6 +49,7 @@
     "\n",
     "\n",
     "class RoutedAccumMetric(AccumMetric, GetAttr):\n",
+    "    \"AccumMetric with predictions and targets for a specific model head.\"\n",
     "    _default = 'metric'\n",
     "    def __init__(self, idx, metric):\n",
     "        self.idx = idx\n",
@@ -98,18 +99,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's assume that the model produces two outputs: classification logits and a regression value."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#hide\n",
+    "\n",
     "import torch\n",
     "from fastai.metrics import accuracy, R2Score, F1Score\n",
     "\n",
@@ -161,7 +157,6 @@
     "```py\n",
     "learn = Learner(...\n",
     "    metrics = mtl_metrics([F1Score(average='macro'), accuracy], [R2Score])\n",
-    "\n",
     ")\n",
     "```"
    ]
