--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -4,21 +4,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.9.12 64-bit' requires ipykernel package.\n",
-      "Run the following command to install 'ipykernel' into the Python environment. \n",
-      "Command: '/usr/local/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#hide\n",
-    "from fastmtl.core import *"
+    "#hide"
    ]
   },
   {
@@ -47,7 +35,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 64-bit",
+   "display_name": "Python 3.9.12 ('fastmtl')",
    "language": "python",
    "name": "python3"
   }
