add tutorials to README

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -92,6 +92,20 @@
     ")\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tutorials"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Video distortion detection](https://bdsaglam.github.io/fastmtl/tutorial.vqa)"
+   ]
   }
  ],
  "metadata": {
