add todo section to README

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -106,6 +106,20 @@
    "source": [
     "[Video distortion detection](https://bdsaglam.github.io/fastmtl/tutorial.vqa)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO\n",
+    "- [ ] Support tabular learner\n",
+    "- [ ] Support fastai>=2.7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
