extend routed metrics for single target multiple prediction

--- a/nbs/02_metric.ipynb
+++ b/nbs/02_metric.ipynb
@@ -34,47 +34,9 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "\n",
-    "from fastcore.basics import GetAttr, store_attr\n",
+    "from fastcore.basics import GetAttr, store_attr, ifnone\n",
     "from types import FunctionType\n",
-    "from fastai.metrics import Metric, AvgMetric, AccumMetric\n",
-    "\n",
-    "\n",
-    "class _LearnerProxy(GetAttr):\n",
-    "    _default = 'learn'\n",
-    "    def __init__(self, learn, idx):\n",
-    "        store_attr()\n",
-    "        self.pred = self.learn.pred[idx]\n",
-    "        self.y = self.learn.y[idx]\n",
-    "\n",
-    "\n",
-    "class RoutedAccumMetric(AccumMetric, GetAttr):\n",
-    "    \"AccumMetric with predictions and targets for a specific model head.\"\n",
-    "    _default = 'metric'\n",
-    "    def __init__(self, idx, metric):\n",
-    "        self.idx = idx\n",
-    "        self.metric = metric\n",
-    "        self._name = metric.name\n",
-    "    \n",
-    "    def reset(self):\n",
-    "        \"Clear all targs and preds\"\n",
-    "        return self.metric.reset()\n",
-    "    \n",
-    "    def accumulate(self, learn):\n",
-    "        \"Store targs and preds from `learn`, using activation function and argmax as appropriate\"\n",
-    "        return self.metric.accumulate(_LearnerProxy(learn, self.idx))\n",
-    "    \n",
-    "    def __call__(self, preds, targs):\n",
-    "        \"Calculate metric on one batch of data\"\n",
-    "        return self.metric(preds[self.idx], targs[self.idx])\n",
-    "    \n",
-    "    @property\n",
-    "    def name(self):\n",
-    "        return self._name\n",
-    "    \n",
-    "    @name.setter\n",
-    "    def name(self, value):\n",
-    "        self._name = value"
+    "from fastai.metrics import Metric, AvgMetric, AccumMetric"
    ]
   },
   {
@@ -85,16 +47,53 @@
    "source": [
     "#export\n",
     "\n",
-    "def route_to_metric(idx, metric):\n",
-    "    \"\"\"Routes model output at idx to metric\"\"\"\n",
+    "class _LearnerProxy(GetAttr):\n",
+    "    _default = 'learn'\n",
+    "    def __init__(self, learn, pred_idx, target_idx):\n",
+    "        store_attr()\n",
+    "        self.pred = self.learn.pred[pred_idx]\n",
+    "        self.y = self.learn.y[target_idx]\n",
+    "\n",
+    "\n",
+    "class RoutedAccumMetric(AccumMetric, GetAttr):\n",
+    "    \"AccumMetric with predictions and targets for a specific model head.\"\n",
+    "    _default = 'metric'\n",
+    "    def __init__(self, metric, pred_idx, target_idx):\n",
+    "        self.metric = metric\n",
+    "        self._name = metric.name\n",
+    "        self.pred_idx = pred_idx\n",
+    "        self.target_idx = target_idx\n",
+    "    \n",
+    "    def reset(self):\n",
+    "        \"Clear all targs and preds\"\n",
+    "        return self.metric.reset()\n",
+    "    \n",
+    "    def accumulate(self, learn):\n",
+    "        \"Store targs and preds from `learn`, using activation function and argmax as appropriate\"\n",
+    "        return self.metric.accumulate(_LearnerProxy(learn, self.pred_idx, self.target_idx))\n",
+    "    \n",
+    "    def __call__(self, preds, targs):\n",
+    "        \"Calculate metric on one batch of data\"\n",
+    "        return self.metric(preds[self.pred_idx], targs[self.target_idx])\n",
+    "    \n",
+    "    @property\n",
+    "    def name(self):\n",
+    "        return self._name\n",
+    "    \n",
+    "    @name.setter\n",
+    "    def name(self, value):\n",
+    "        self._name = value\n",
+    "    \n",
+    "def route_to_metric(metric, pred_idx, target_idx):\n",
+    "    \"\"\"Routes model output at `pred_idx` and target at index `target_idx` to metric\"\"\"\n",
     "    if isinstance(metric, type): \n",
     "        metric = metric()\n",
     "    if isinstance(metric, FunctionType):\n",
-    "        func = lambda preds, *targs, **kwargs: metric(preds[idx], targs[idx], **kwargs)\n",
+    "        func = lambda preds, *targs, **kwargs: metric(preds[pred_idx], targs[target_idx], **kwargs)\n",
     "        func.__name__ = metric.__name__\n",
     "        return AvgMetric(func)\n",
     "    if isinstance(metric, Metric):\n",
-    "        return RoutedAccumMetric(idx, metric)\n",
+    "        return RoutedAccumMetric(metric, pred_idx, target_idx)\n",
     "    raise ValueError(\"Unsupported metric type; must be either function or Metric\")\n"
    ]
   },
@@ -117,11 +116,11 @@
     "targets = [target1, target2]\n",
     "\n",
     "inner_f1_macro = F1Score(average='macro')\n",
-    "f1_macro = route_to_metric(0, inner_f1_macro)\n",
+    "f1_macro = route_to_metric(inner_f1_macro, 0, 0)\n",
     "test_close(f1_macro(preds, targets), inner_f1_macro(preds[0], targets[0]))\n",
     "\n",
     "inner_r2 = R2Score()\n",
-    "r2 = route_to_metric(1, inner_r2)\n",
+    "r2 = route_to_metric(inner_r2, 1, 1)\n",
     "test_close(r2(preds, targets), inner_r2(preds[1], targets[1]))"
    ]
   },
@@ -135,7 +134,7 @@
     "\n",
     "def mtl_metrics(*metrics_list):\n",
     "    \"\"\"Convenience function to route each prediction to list of metrics by their order.\"\"\"\n",
-    "    return [route_to_metric(i, m) for i, metrics in enumerate(metrics_list) for m in metrics]"
+    "    return [route_to_metric(m, i, i) for i, metrics in enumerate(metrics_list) for m in metrics]"
    ]
   },
   {
@@ -160,11 +159,6 @@
     ")\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
