extend CombinedLoss to support arbitrary routing between prediction and targets

--- a/nbs/01_loss.ipynb
+++ b/nbs/01_loss.ipynb
@@ -45,28 +45,38 @@
    "source": [
     "#export\n",
     "\n",
-    "class CombinedLoss():\n",
+    "from typing import Callable\n",
+    "from dataclasses import dataclass\n",
+    "\n",
+    "@dataclass\n",
+    "class LossRouting:\n",
+    "    loss_func: Callable\n",
+    "    pred_idx: int\n",
+    "    target_idx: int\n",
+    "    weight: float = 1.0\n",
+    "\n",
+    "class CombinedLoss:\n",
     "    \"\"\"Applies loss functions to multiple model outputs and sums them. \n",
     "    If applicable, it can decode and compute activations for each model output.\"\"\"\n",
     "\n",
-    "    def __init__(self, *loss_funcs, weight=None):\n",
-    "        if weight is None:\n",
-    "            weight = [1.]*len(loss_funcs)\n",
-    "        self.weight = weight\n",
-    "        self.loss_funcs = loss_funcs\n",
+    "    def __init__(self, *loss_routings):\n",
+    "        self.loss_routings = loss_routings\n",
     "    \n",
     "    def __call__(self, outs, *targets, **kwargs):\n",
     "        return sum([\n",
-    "            w*loss_func(out, target) \n",
-    "            for loss_func, w, out, target in zip(self.loss_funcs, self.weight, outs, targets)\n",
+    "            routing.weight*routing.loss_func(outs[routing.pred_idx], targets[routing.target_idx]) \n",
+    "            for routing in self.loss_routings\n",
     "        ])\n",
     "    \n",
     "    def activation(self, outs): \n",
-    "        return [getattr(loss_func, 'activation', noop)(out) for loss_func, out in zip(self.loss_funcs, outs)]\n",
+    "        return [getattr(routing.loss_func, 'activation', noop)(outs[routing.pred_idx]) for routing in self.loss_routings]\n",
     "    \n",
     "    def decodes(self, outs):\n",
-    "        return [getattr(loss_func, 'decodes', noop)(out) for loss_func, out in zip(self.loss_funcs, outs)]\n",
-    "    "
+    "        return [getattr(routing.loss_func, 'decodes', noop)(outs[routing.pred_idx]) for routing in self.loss_routings]\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def from_one_to_one_routing(cls, *loss_funcs):\n",
+    "        return cls(*[LossRouting(loss_func, pred_idx=i, target_idx=i, weight=1.0) for i, loss_func in enumerate(loss_funcs)])\n"
    ]
   },
   {
@@ -90,7 +100,7 @@
     "\n",
     "ce = CrossEntropyLossFlat()\n",
     "bce = BCEWithLogitsLossFlat()\n",
-    "comb_loss = CombinedLoss(ce, bce)\n",
+    "comb_loss = CombinedLoss.from_one_to_one_routing(ce, bce)\n",
     "\n",
     "bs = 8\n",
     "target1, output1 = torch.randint(0, 5, (bs,)), torch.randn(bs, 5) # 5 classes\n",
@@ -130,16 +140,15 @@
     {
      "data": {
       "text/plain": [
-       "[tensor([[-0.0704,  0.3978, -0.0734, -0.0817,  0.5799],\n",
-       "         [ 0.5904, -0.2582,  0.2694, -0.2678, -0.0801],\n",
-       "         [-0.1434, -0.7269, -0.7748,  1.5109,  0.2760],\n",
-       "         [-1.3234,  0.1135,  1.8447,  1.3900,  1.1048],\n",
-       "         [-0.4743,  0.3586,  0.6237,  0.0995, -1.7103],\n",
-       "         [-1.0282, -0.1217,  1.4803, -2.6635,  0.1207],\n",
-       "         [-1.0878, -0.1865, -0.5548, -1.6343,  0.2949],\n",
-       "         [ 0.8009,  1.0363,  0.1929,  0.3628, -0.1960]]),\n",
-       " tensor([ -1.9926, -11.5465, -14.1181,  10.7254,  -3.6243,   8.0234,  -6.7252,\n",
-       "          28.0304])]"
+       "[tensor([[ 9.6559e-01,  1.2909e+00, -2.0418e-01, -9.8991e-02,  5.9807e-01],\n",
+       "         [-6.1768e-01, -8.8121e-01, -9.5900e-03, -1.4741e+00, -5.2530e-01],\n",
+       "         [ 9.5259e-01,  1.2350e+00, -5.7586e-01, -6.4723e-02, -8.5460e-01],\n",
+       "         [ 1.3948e+00,  6.7017e-01,  2.4812e+00, -2.3243e+00,  4.6702e-01],\n",
+       "         [ 3.4889e-02, -2.5438e-01, -1.0769e+00, -9.6301e-02,  1.1432e+00],\n",
+       "         [-9.2353e-01, -4.6509e-01,  1.2955e+00,  3.1447e-01, -2.5700e+00],\n",
+       "         [ 8.2171e-01, -2.3441e-01, -4.7117e-01,  5.1372e-01,  7.5967e-01],\n",
+       "         [-5.2264e-01,  3.5434e-01,  2.9362e-01,  8.5736e-04, -1.8668e-01]]),\n",
+       " tensor([-2.1232, 11.6096, -5.7914, -7.5502,  7.1219, -5.3170,  4.3356, 13.7366])]"
       ]
      },
      "execution_count": null,
@@ -166,8 +175,8 @@
     {
      "data": {
       "text/plain": [
-       "[tensor([4, 0, 3, 2, 2, 2, 4, 1]),\n",
-       " tensor([False, False, False,  True, False,  True, False,  True])]"
+       "[tensor([1, 2, 1, 2, 4, 2, 0, 1]),\n",
+       " tensor([False,  True, False, False,  True, False,  True,  True])]"
       ]
      },
      "execution_count": null,
@@ -194,16 +203,16 @@
     {
      "data": {
       "text/plain": [
-       "[tensor([[0.1539, 0.2458, 0.1534, 0.1521, 0.2948],\n",
-       "         [0.3238, 0.1386, 0.2348, 0.1372, 0.1656],\n",
-       "         [0.1131, 0.0631, 0.0602, 0.5915, 0.1721],\n",
-       "         [0.0181, 0.0760, 0.4290, 0.2723, 0.2047],\n",
-       "         [0.1196, 0.2750, 0.3585, 0.2122, 0.0347],\n",
-       "         [0.0523, 0.1295, 0.6429, 0.0102, 0.1651],\n",
-       "         [0.1028, 0.2531, 0.1751, 0.0595, 0.4096],\n",
-       "         [0.2615, 0.3309, 0.1424, 0.1687, 0.0965]]),\n",
-       " tensor([1.1998e-01, 9.6696e-06, 7.3891e-07, 9.9998e-01, 2.5975e-02, 9.9967e-01,\n",
-       "         1.1989e-03, 1.0000e+00])]"
+       "[tensor([[0.2679, 0.3710, 0.0832, 0.0924, 0.1855],\n",
+       "         [0.1951, 0.1499, 0.3583, 0.0828, 0.2139],\n",
+       "         [0.3259, 0.4322, 0.0707, 0.1178, 0.0535],\n",
+       "         [0.2054, 0.0995, 0.6088, 0.0050, 0.0812],\n",
+       "         [0.1671, 0.1251, 0.0550, 0.1466, 0.5062],\n",
+       "         [0.0648, 0.1026, 0.5965, 0.2236, 0.0125],\n",
+       "         [0.3033, 0.1055, 0.0832, 0.2229, 0.2851],\n",
+       "         [0.1142, 0.2746, 0.2584, 0.1928, 0.1599]]),\n",
+       " tensor([1.0686e-01, 9.9999e-01, 3.0443e-03, 5.2573e-04, 9.9919e-01, 4.8834e-03,\n",
+       "         9.8707e-01, 1.0000e+00])]"
       ]
      },
      "execution_count": null,
@@ -214,13 +223,6 @@
    "source": [
     "comb_loss.activation([output1, output2])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
