upgrade fastai version

--- a/nbs/01_loss.ipynb
+++ b/nbs/01_loss.ipynb
@@ -140,15 +140,16 @@
     {
      "data": {
       "text/plain": [
-       "[tensor([[ 9.6559e-01,  1.2909e+00, -2.0418e-01, -9.8991e-02,  5.9807e-01],\n",
-       "         [-6.1768e-01, -8.8121e-01, -9.5900e-03, -1.4741e+00, -5.2530e-01],\n",
-       "         [ 9.5259e-01,  1.2350e+00, -5.7586e-01, -6.4723e-02, -8.5460e-01],\n",
-       "         [ 1.3948e+00,  6.7017e-01,  2.4812e+00, -2.3243e+00,  4.6702e-01],\n",
-       "         [ 3.4889e-02, -2.5438e-01, -1.0769e+00, -9.6301e-02,  1.1432e+00],\n",
-       "         [-9.2353e-01, -4.6509e-01,  1.2955e+00,  3.1447e-01, -2.5700e+00],\n",
-       "         [ 8.2171e-01, -2.3441e-01, -4.7117e-01,  5.1372e-01,  7.5967e-01],\n",
-       "         [-5.2264e-01,  3.5434e-01,  2.9362e-01,  8.5736e-04, -1.8668e-01]]),\n",
-       " tensor([-2.1232, 11.6096, -5.7914, -7.5502,  7.1219, -5.3170,  4.3356, 13.7366])]"
+       "[tensor([[ 0.1850, -1.1469,  1.2270,  0.8119, -1.4351],\n",
+       "         [-1.0543,  1.5350, -1.0777,  0.4074,  0.2599],\n",
+       "         [ 0.1193,  2.9036,  0.1536,  1.0384, -1.2029],\n",
+       "         [-0.8484,  1.8163,  0.6120,  1.1216,  0.4150],\n",
+       "         [ 1.3586, -1.7410,  1.6133, -1.1984,  0.9948],\n",
+       "         [ 0.8181, -1.2083, -1.2216, -0.7513,  0.2764],\n",
+       "         [ 1.2261, -1.1696, -1.1735,  1.0326, -0.0525],\n",
+       "         [ 0.2331,  0.1555,  1.1627, -1.2526, -0.0451]]),\n",
+       " tensor([  3.2092,  -6.4007,  -0.3515,  -3.4715,  -1.5865, -16.1386,   9.8419,\n",
+       "         -13.8744])]"
       ]
      },
      "execution_count": null,
@@ -175,8 +176,8 @@
     {
      "data": {
       "text/plain": [
-       "[tensor([1, 2, 1, 2, 4, 2, 0, 1]),\n",
-       " tensor([False,  True, False, False,  True, False,  True,  True])]"
+       "[tensor([2, 1, 1, 1, 2, 0, 0, 2]),\n",
+       " tensor([ True, False, False, False, False, False,  True, False])]"
       ]
      },
      "execution_count": null,
@@ -203,16 +204,16 @@
     {
      "data": {
       "text/plain": [
-       "[tensor([[0.2679, 0.3710, 0.0832, 0.0924, 0.1855],\n",
-       "         [0.1951, 0.1499, 0.3583, 0.0828, 0.2139],\n",
-       "         [0.3259, 0.4322, 0.0707, 0.1178, 0.0535],\n",
-       "         [0.2054, 0.0995, 0.6088, 0.0050, 0.0812],\n",
-       "         [0.1671, 0.1251, 0.0550, 0.1466, 0.5062],\n",
-       "         [0.0648, 0.1026, 0.5965, 0.2236, 0.0125],\n",
-       "         [0.3033, 0.1055, 0.0832, 0.2229, 0.2851],\n",
-       "         [0.1142, 0.2746, 0.2584, 0.1928, 0.1599]]),\n",
-       " tensor([1.0686e-01, 9.9999e-01, 3.0443e-03, 5.2573e-04, 9.9919e-01, 4.8834e-03,\n",
-       "         9.8707e-01, 1.0000e+00])]"
+       "[tensor([[0.1621, 0.0428, 0.4596, 0.3034, 0.0321],\n",
+       "         [0.0429, 0.5709, 0.0419, 0.1849, 0.1595],\n",
+       "         [0.0476, 0.7710, 0.0493, 0.1194, 0.0127],\n",
+       "         [0.0329, 0.4728, 0.1418, 0.2360, 0.1164],\n",
+       "         [0.3218, 0.0145, 0.4151, 0.0250, 0.2236],\n",
+       "         [0.4874, 0.0642, 0.0634, 0.1015, 0.2835],\n",
+       "         [0.4378, 0.0399, 0.0397, 0.3607, 0.1219],\n",
+       "         [0.1837, 0.1700, 0.4655, 0.0416, 0.1391]]),\n",
+       " tensor([9.6118e-01, 1.6577e-03, 4.1302e-01, 3.0135e-02, 1.6988e-01, 9.7967e-08,\n",
+       "         9.9995e-01, 9.4281e-07])]"
       ]
      },
      "execution_count": null,
@@ -227,7 +228,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('fastmtl')",
+   "display_name": "fastmtl",
    "language": "python",
    "name": "python3"
   }
