--- a/nbs/02_metric.ipynb
+++ b/nbs/02_metric.ipynb
@@ -60,7 +60,6 @@
     "    _default = 'metric'\n",
     "    def __init__(self, metric, pred_idx, target_idx):\n",
     "        self.metric = metric\n",
-    "        self._name = metric.name\n",
     "        self.pred_idx = pred_idx\n",
     "        self.target_idx = target_idx\n",
     "    \n",
@@ -75,14 +74,6 @@
     "    def __call__(self, preds, targs):\n",
     "        \"Calculate metric on one batch of data\"\n",
     "        return self.metric(preds[self.pred_idx], targs[self.target_idx])\n",
-    "    \n",
-    "    @property\n",
-    "    def name(self):\n",
-    "        return self._name\n",
-    "    \n",
-    "    @name.setter\n",
-    "    def name(self, value):\n",
-    "        self._name = value\n",
     "    \n",
     "def route_to_metric(metric, pred_idx, target_idx):\n",
     "    \"\"\"Routes model output at `pred_idx` and target at index `target_idx` to metric\"\"\"\n",
@@ -163,7 +154,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('fastmtl')",
+   "display_name": "fastmtl",
    "language": "python",
    "name": "python3"
   }
