--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -124,7 +124,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('fastmtl')",
+   "display_name": "fastmtl",
    "language": "python",
    "name": "python3"
   }
